tdf#142605 use frame size in oox export of BezierCurve

The export had used the bound rectangle of PolyPolygonBezier. But that
contains control points. Use API position and size instead.

I have not incorporated the changes into existing WritePolyPolygon,
but have made an own version for SdrPathObj, because I find it easier
to read and maintain, than having a lot of case distinctions depending
on the shape type.

Change-Id: I2e646c4f5fa37174c4979855212ca72f2dfa447e